yoshimi 1.3.x

2016-1-7 Will
- bugfix, Yoshimi now exits correctly with '-c' argument and trailing '&'.
- Help now context sensitive, and list reoganised.
- Command line can now load individual external instruments to the current part.
- Tiny optimisation to SybSynth filter.
- Updated appdata and desktop files.
- Updated Command_Line.txt
- Implemented alsa/jack preferences within command line environment.

2016-1-6 Rob
- Completed Program Change improvements and defined common point
  in SynthEngine for all Program Change calls.

2016-1-4 Will
- Subsynth bugfix. Buffer size no longer has to be divisible by 8.

2016-1-3 Will
- Improved cleanness of program load from various sources.

2016-1-2 Will
- Program change no longer mutes the whole synth.

2015-12-31 Will
- Disabled jack/alsa tabs if running as LV2
- Allow mutiple instances whith alsa audio as they can
  now be set to different backends/soundcards.
- Root/Bank/Program thread now lower than both jack and alsa.

2015-12-30 Andrew
- Revised music clients so that Yoshimi can always start.
  If the wanted backend is missing it will try the other
  option and if that fails, set a null backend. 

2015-12-29 Will
- Updated docs (especially command line)
- Moved Drum kit 2 so it is MIDI accessible
- Added Moor Drums
- Added Choir Stabs

2015-12-27 Will
- C/L system and insert effects now report to the gui

2015-12-26 Will
- Ported pop suppression feature from Zyn 2.5.2
- Changed default XML Zyn instrument compatibility version to 2.5
- Bugfix. NRPN insert and system effect changes only worked correctly
  on the lowest value effect number.

2015-12-23 Will
- Small improvements to command line access.

2015-12-22 Will
- Bugfix. Had screwed up vector Y control. Now better
  error checked too.

2015-12-21 Will
- More code cleanup.

2015-12-20 Will
- (MusicIO) hooks in place for key and channel pressure.
- Implemented Y/N query for command line.
- Command line can now change part names.
- Added reset capability.
